--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="./Vignesh Mathiyalagan.jpg" alt="Your Profile Picture" class="profile-picture">
-            <h1>Vignesh Mathiyalagan</h1>
-            <p>Am Electronics Engineer</p>
+            <img src="./Mukesh.jpg" alt="Your Profile Picture" class="profile-picture">
+            <h1>MUKESH A</h1>
+            <p>STUDENT</p>
         </div>
     </header>
 
@@ -115,7 +115,7 @@
     <section id="about">
         <div class="section-content">
             <h2>About Me</h2>
-            <p>I'm a <b>cyber security </b>expert and technology enthusiast who is passionate about helping organizations protect their data and create secure online environments. I'm driven by the desire to put technology to work for the greater good and empower individuals and businesses to benefit from the digital revolution. With over 7 years of experience in the field, I'm dedicated to staying up to date with the latest trends and innovations in the cyber security landscape. I'm also committed to helping others learn more about the importance of online security and how to stay safe online..</p>
+            <p>I'm a <b>student </b>Motivated information technology graduate with a strong foundation in information technology Quick learner with a passion for web development, eager to apply academic knowledge in a dynamic work environment.</p>
         </div>
     </section>
 
@@ -132,14 +132,8 @@
         <div class="section-content">
             <h2>Skills</h2>
             <ul>
-                <li>CyberSecurity</li>
-                <li>Internet of Things</li>
-                <li>Cloud Computing</li>
                 <li>Python</li>
-                <li>IBM cloud</li>
-                <li>ML & AI</li>
                 <li>java</li>
-                <li>Blockchain</li>
                 <li>c++</li>
                 <li>Java script</li>
             </ul>
@@ -150,10 +144,8 @@
         <div class="section-content">
             <h2>Projects</h2>
             <ul>
-                <li><a href="#">AI Based alternator control system</a></li>
-                <li><a href="https://github.com/techtrainer20/blockchain.git">Cloud Security IBM</a></li>
-                <li><a href="#">IBM chetbot</a></li>
-                <li><a href="#">chetbot</a></li> 
+                <li><a href="#">digital portfolio</a></li>
+                
                 <!-- Add more project links here -->
             </ul>
         </div>
@@ -164,14 +156,14 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="./Name list  for IBM SkillsBuild.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="./Mukesh1.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
     </section>
 
     <footer>
-        <p>&copy; 2023 VIGNESH M</p>
+        <p>&copy; 2023 MUKESH Ap</p>
     </footer>
 
     <script>
